Fix datapreview horizontal scroll and height

--- a/shared/scss/components/ckan/datapreview.scss
+++ b/shared/scss/components/ckan/datapreview.scss
@@ -6,7 +6,7 @@
   }
 
   .data-view-container {
-    overflow: hidden;
-    max-height:670px;
+    overflow-y: hidden;
+    height: auto;
   }
 }
